[tool.poetry]
name = "vesicle-picker"
version = "0.1.0"
description = ""
authors = ["Ryan Karimi <ryan.karimi@mail.utoronto.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.2"
opencv-python = "^4.8.1.78"
cryosparc-tools = "^4.4.1"
poethepoet = "^0.24.4"
segment-anything = {git = "https://github.com/facebookresearch/segment-anything.git"}
scipy = "^1.11.4"
matplotlib = "^3.8.2"
configparser = "^6.0.0"
pandas = "^2.1.4"
tqdm = "^4.66.1"
jupyter = "^1.0.0"
primefac = "^2.0.12"

[tool.poe.tasks] # Change the line below to meet your specific environment. Currently configured for CUDA 11.8
install-pytorch = "pip install torch==2.3.1+cu118 torchvision==0.18.1+cu118 torchaudio==2.3.1+cu118 -f https://download.pytorch.org/whl/torch_stable.html"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
